<resources>
    <string name="app_name">Find-My-Set</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="login">Login</string>
    <string name="loginText">Введите свой логин</string>
    <string name="findSet">Найти сет</string>
    <string name="setCheck">Отправить сет</string>
    <string name="points">Очков:</string>
    <string name="cardsLeft">Монет осталось:</string>
</resources>
