<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".GameActivity">



    <ru.orlovvv.SetCardsFieldView
        android:id="@+id/setCardsFieldView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="2"
            android:text="@string/loginText"
            android:id="@+id/gameNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_weight="2"
            android:text="@string/points"
            android:id="@+id/points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity=""/>

        <TextView
            android:layout_weight="2"
            android:text="@string/cardsLeft"
            android:id="@+id/cardsLeft"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:onClick="findSet"
            android:id="@+id/findSet"
            android:text="@string/findSet"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:onClick="onTakeSet"
            android:id="@+id/setCheck"
            android:text="@string/setCheck"
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>